--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "[![Deploy to now](https://deploy.now.sh/static/button.svg)](https://deploy.now.sh/?repo=https://github.com/grand-stack/grand-stack-starter&env=NEO4J_USER&env=NEO4J_URI&env=NEO4J_PASSWORD)",
   "main": "index.js",
   "scripts": {
-    "client": "cd api && npm start",
-    "server": "cd ui && npm start",
+    "server": "cd api && npm run start-dev",
+    "client": "cd ui && npm start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "repository": {
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/grand-stack/grand-stack-starter/issues"
   },
-  "homepage": "https://github.com/grand-stack/grand-stack-starter#readme"
+  "homepage": "https://github.com/grand-stack/grand-stack-starter#readme",
+  "devDependencies": {
+    "concurrently": "^5.0.1"
+  }
 }
