--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
   "scripts": {
@@ -25,7 +26,8 @@
   "devDependencies": {
     "http-proxy-middleware": "^0.20.0",
     "husky": "^2.7.0",
-    "lint-staged": "^8.2.1"
+    "lint-staged": "^8.2.1",
+    "react-social-icons": "^4.1.0"
   },
   "husky": {
     "hooks": {
